--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "autoload": {
         "psr-4": {
             "Notes\\Module1\\": "module-1/server/",
-            "Notes\\Module2\\": "module-2/server/"
+            "Notes\\Module2\\": "module-2/server/",
+            "Notes\\Module3\\": "module-3/server/"
         },
         "files": [
             "util/Database.php",
