--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,16 @@
             "Notes\\Module1\\": "module-1/server/",
             "Notes\\Module2\\": "module-2/server/",
             "Notes\\Module3\\": "module-3/server/",
-            "Notes\\Module4\\": "module-4/server/"
+            "Notes\\Module4\\": "module-4/server/",
+            "Notes\\Module5\\": "module-5/server/"
         },
         "files": [
             "util/Database.php",
             "util/types/BaseNote.php",
             "util/types/BaseUser.php",
             "util/types/Note.php",
-            "util/types/User.php"
+            "util/types/User.php",
+            "module-5/config.php"
         ]
     }
 }
