--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
             "util/types/BaseUser.php",
             "util/types/Note.php",
             "util/types/User.php",
+            "module-1/config.php",
             "module-5/config.php"
         ]
     }
